@@ -1,6 +1,10 @@
 Changes
 =======
 
+Next
+----
+- Add an interactive file inspector like the one in rasterio.
+
 1.1 (2014-01-22)
 ----------------
 - Use a context manager to manage drivers (#78), a backwards compatible but
